--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-
+ 	<!-- zhangxl test -->
     <application
         android:name="com.olen.mobile.app.MobileApplication"
         android:allowBackup="true"
